trying to fix flex/grid 'gap' issue at OS

--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -1,6 +1,7 @@
 .filter {
     display: flex;
     gap: 2rem;
+    grid-gap: 2rem;
 
     @include respond(mobile) {
         display: grid;
